# k2_client

./: CMakeLists.txt  README.md  manifest.xml  package.xml
include/k2_client/: k2_client.h
launch/: k2_client.launch  kinect2Client.launch
libs/pynaoqi-python2.7-2.1.4.13-mac64/: libalbehavior.dylib  libalcommon.dylib  libalerror.dylib  libalpythontools.dylib  libalthread.dylib  libalvalue.dylib  libqi.dylib  libqic.dylib  libqimessaging.dylib  libqipython.dylib  libqitype.dylib  librttools.dylib
msg/: Audio.msg  Body.msg  BoundingBox2D.msg  Face.msg  FacePoints.msg  PersonArray.msg  PersonMessage.msg  Quaternion.msg
scripts/: Person.py  Subscriber.py  data-parser.py  information_subscriber.py  publisher_test.py  seat.py  test.py
src/: audio.cpp  bodies.cpp  depth.cpp  faces.cpp  ir.cpp  rgb.cpp  startAudio.cpp  startBody.cpp  startDepth.cpp  startFace.cpp  startIR.cpp  startMapping.cpp  startRGB.cpp
