<?xml version="1.0"?>
<package format="2">
  <name>k2_client</name>  
  <version>1.1.0</version>
  <description>
      startKinect2
  </description>
  <author>Anurag Jakhotia</author>
  <maintainer email="aaa@cs.cmu.edu">Anurag Jakhotia</maintainer>
  <license>BSD</license>
  <!--review status="unreviewed" notes=""/-->
  <url type="website">http://ros.org/wiki/startKinect2</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend> 
  
</package>


